--- a/templates/partials/_header.html
+++ b/templates/partials/_header.html
@@ -12,7 +12,7 @@
             <a href="{% url 'album_list' %}">
                 <li>Music</li>
             </a>
-            <a href="#">
+            <a href="{% url 'video_list' %}">
                 <li>Videos</li>
             </a>
             <a href="{% url 'events_list' %}">
