gallery album list and detail

--- a/apps/video/templates/video/video_list.html
+++ b/apps/video/templates/video/video_list.html
@@ -4,7 +4,7 @@
 {% block content %}
     <div class="container">
         <div class="row">
-            <div class="col-sm-12 video-list">
+            <div class="col-sm-12 outer-list">
                 <h2 class="h2">Videos</h2>
                 <hr/>
                 {% for object in object_list %}
