--- a/static/css/nep.css
+++ b/static/css/nep.css
@@ -455,6 +455,7 @@ ul.social li a i:hover {
     font-family: 'Railway', sans-serif;
     font-weight: bold;
     padding: 15px;
+    color: #FFFFFF;
 }
 
 .outer-wrapper:hover .inner-image-content img {
