--- a/templates/partials/_header.html
+++ b/templates/partials/_header.html
@@ -24,9 +24,9 @@
             <a href="#">
                 <li>News</li>
             </a>
-            <a href="#">
-                <li>Contact</li>
-            </a>
+{#            <a href="#">#}
+{#                <li>Contact</li>#}
+{#            </a>#}
         </ul>
 
         <div class="header_right">
