news list in _header.html

--- a/templates/partials/_header.html
+++ b/templates/partials/_header.html
@@ -21,7 +21,7 @@
             <a href="{% url 'gallery_album_list' %}">
                 <li>Gallery</li>
             </a>
-            <a href="#">
+            <a href="{% url 'news_list' %}">
                 <li>News</li>
             </a>
 {#            <a href="#">#}
