remove images and vid1 folder from static, fontawesome local link to base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
     <link href="{% static 'css/style.css' %}" rel='stylesheet' type='text/css'/>
     <link href="{% static 'css/magnific-popup.css' %}" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css"
-          href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+          href="{% static 'fontawesome/css/font-awesome.min.css' %}">
     <link href="{% static 'css/nep.css' %}" rel="stylesheet" type="text/css">
     <!--webfont-->
     <link href='http://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900' rel='stylesheet'
