--- a/templates/base.html
+++ b/templates/base.html
@@ -12,10 +12,10 @@
           href="{% static 'fontawesome/css/font-awesome.min.css' %}">
     <link href="{% static 'css/nep.css' %}" rel="stylesheet" type="text/css">
     <!--webfont-->
-{#    <link href='http://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900' rel='stylesheet'#}
-{#          type='text/css'>#}
-{#    <link href='http://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700,800,900' rel='stylesheet'#}
-{#          type='text/css'>#}
+    <link href='http://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900' rel='stylesheet'
+          type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700,800,900' rel='stylesheet'
+          type='text/css'>
 
     {% block end_head %}
     {% endblock %}
