--- a/templates/_base.html
+++ b/templates/_base.html
@@ -31,10 +31,21 @@
     {% endif %}
     <div class="container">
         {% include 'partials/_header.html' %}
-        <div class="index-banner">
-            <div class="example1">
-                <article style="position: absolute; width: 100%;">
-                    <div class="banner-wrap">
+        <div class="banner_right">
+            <h1>We're Nepathya</h1>
+
+            <p>
+                Nepathya is one name in Nepali Music – which has gained consistent popularity and social
+                recognition. During the past 21 years of its existence- Nepathya has been the
+                trendsetters. They have been the pioneers to blend folk melodies into youth friendly pop
+                and rock format. Folk melodies have remained the life force of Nepathya.
+            </p>
+            <a href="#" class="banner_btn">Book Now</a>
+        </div>
+{#        <div class="index-banner">#}
+{#            <div class="example1">#}
+{#                <article style="position: absolute; width: 100%;">#}
+{#                    <div class="banner-wrap">#}
                         {#                        <div class="bannertop_box">#}
                         {#                            <div class="menu_box">#}
                         {#                                <ul class="nav">#}
@@ -49,29 +60,29 @@
                         {#                                </ul>#}
                         {#                            </div>#}
                         {#                        </div>#}
-                        <div class="banner_right">
-                            <h1>We're Nepathya</h1>
-
-                            <p>
-                                Nepathya is one name in Nepali Music – which has gained consistent popularity and social
-                                recognition. During the past 21 years of its existence- Nepathya has been the
-                                trendsetters. They have been the pioneers to blend folk melodies into youth friendly pop
-                                and rock format. Folk melodies have remained the life force of Nepathya.
-                            </p>
-                            <a href="#" class="banner_btn">Book Now</a>
-                        </div>
-                        <div class='clearfix'></div>
-                    </div>
-                </article>
-
-                <!--    <a class="wmuSliderPrev">Previous</a><a class="wmuSliderNext">Next</a> -->
-                <!--   <ul class="wmuSliderPagination">
-					  <li><a href="#" class="">0</a></li>
-					  <li><a href="#" class="">1</a></li>
-					  <li><a href="#" class="wmuActive">2</a></li>
-				  </ul> -->
-            </div>
-        </div>
+{#                        <div class="banner_right">#}
+{#                            <h1>We're Nepathya</h1>#}
+{##}
+{#                            <p>#}
+{#                                Nepathya is one name in Nepali Music – which has gained consistent popularity and social#}
+{#                                recognition. During the past 21 years of its existence- Nepathya has been the#}
+{#                                trendsetters. They have been the pioneers to blend folk melodies into youth friendly pop#}
+{#                                and rock format. Folk melodies have remained the life force of Nepathya.#}
+{#                            </p>#}
+{#                            <a href="#" class="banner_btn">Book Now</a>#}
+{#                        </div>#}
+{#                        <div class='clearfix'></div>#}
+{#                    </div>#}
+{#                </article>#}
+{##}
+{#                <!--    <a class="wmuSliderPrev">Previous</a><a class="wmuSliderNext">Next</a> -->#}
+{#                <!--   <ul class="wmuSliderPagination">#}
+{#					  <li><a href="#" class="">0</a></li>#}
+{#					  <li><a href="#" class="">1</a></li>#}
+{#					  <li><a href="#" class="wmuActive">2</a></li>#}
+{#				  </ul> -->#}
+{#            </div>#}
+{#        </div>#}
     </div>
 </div>
 {% block content %}
