--- a/templates/base.html
+++ b/templates/base.html
@@ -29,9 +29,9 @@
         {% endfor %}
     </ul>
 {% endif %}
-
+<div class="container">
 {% include 'partials/_header.html' %}
-
+</div>
 <section>
     {% block content %}
     {% endblock %}
