--- a/apps/discography/templates/discography/album_list.html
+++ b/apps/discography/templates/discography/album_list.html
@@ -46,6 +46,12 @@
                             <div class="total-tracks-count">
                                 <a href="{{ music_store.url }}"><i class="fa {{ music_store.social_icon.font_awesome_class }}"></i></a>
                             </div>
+                            <div class="total-tracks-count">
+                                <a href="{{ music_store.url }}"><i class="fa {{ music_store.social_icon.font_awesome_class }}"></i></a>
+                            </div>
+                            <div class="total-tracks-count">
+                                <a href="{{ music_store.url }}"><i class="fa {{ music_store.social_icon.font_awesome_class }}"></i></a>
+                            </div>
                         {% endfor %}
                     </div>
 
